# SemanticSegmentation-Deployments

./: README.md
inferwithopenvino/: CMakeLists.txt  README.md  ovoinference.cpp  ovoinference.h  test.cpp
inferwithopenvino/scripts/: benchmark.sh  mo.sh
inferwithtensorrt/: CMakeLists.txt  README.md  prepinferwithtrt.cpp  test.cpp  trt_dep.cpp  trt_dep.h  trtinference.cpp  trtinference.h
ros2_wrapper/ros2_openvino/: CMakeLists.txt  package.xml
ros2_wrapper/ros2_openvino/src/: inferwithovo.cpp
ros2_wrapper/ros2_tensorrt/: CMakeLists.txt  package.xml
ros2_wrapper/ros2_tensorrt/src/: inferwithtrt.cpp
